# qt-wasm

./: CMakeLists.txt  README.md  main.cpp
qrc/: App.qml  Main.qml
